Rationalize TouchExplorationController coordinate usage

events delivered to TouchExplorationController, an event rewriter, are in pixels, but are not transformed. Namely, they need to be mapped into the coordinate space of the root window.
For example, a root window that is default landscape, when put into portrit, has the transformation matrix
[0, 2.0, 0, 0]
[-2, 0, 0, 1600]
[0, 0, 1, 0]
[0, 0, 0, 1]

In this change:
- always convert incoming events to root window coordinates using DIP units
- always convert outgoing synthesized events to screen pixels
- ensure all logic within TouchExplorationController works based on root window DIP coordinates including lift activation, edge detection

Bug: 847677
Test: on a device which is default in landscape, try touching all four corners, performing volume sliding on right edge. Flip into tablet, and try this in all four 90 degree rotations and verify the same. Try typing in the vk; verify lift activation.

ash_unittests --gtest_filter=*TouchEx*.*

Change-Id: Ibbce6d630734642a178db975c51be159ef913c00
Reviewed-on: https://chromium-review.googlesource.com/1083497
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564342}
Former-commit-id: 3facca3dccb610edc29409fb823184c85faa8c08